# giraf-core

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/citizens/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/citizens/migrations/: 0001_initial.py  0002_initial.py
apps/citizens/tests/: test_citizens.py  test_services.py
apps/grades/: admin.py  api.py  models.py  schemas.py  services.py
apps/grades/migrations/: 0001_initial.py  0002_initial.py
apps/grades/tests/: test_grades.py
apps/invitations/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/invitations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/invitations/tests/: test_invitations.py
apps/organizations/: admin.py  api.py  models.py  schemas.py  services.py
apps/organizations/migrations/: 0001_initial.py  0002_initial.py
apps/organizations/tests/: factories.py  test_api.py  test_models.py  test_services.py
apps/pictograms/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/pictograms/migrations/: 0001_initial.py
apps/pictograms/tests/: test_pictograms.py  test_services.py
apps/users/: api.py  models.py  schemas.py  services.py
apps/users/migrations/: 0001_initial.py  (+1 more)
config/: api.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: exceptions.py  jwt.py  permissions.py
core/tests/: __init__.py  test_permissions.py
(+6 files in other folders)
